# XploreXBRL

./: .gitignore  README.md  pyproject.toml
xplore_xbrl/: app.py
タクソノミ/taxonomy/jpcrp/2024-11-01/r/: jpcrp_000100-000_2024-11-01_pre.xml
