[tool.poetry]
name = "xplore-xbrl"
version = "0.1.0"
description = "Xplore XBRL"
authors = ["elroy-galbraith <elroy.galbraith@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
plotly = "^6.0.1"
lxml = "^5.3.1"
tqdm = "^4.67.1"
python-dotenv = "^1.0.1"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
streamlit = "^1.43.2"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
